fix body overflow for safari

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,7 +13,7 @@ body {
 
 	&.sidebar-open {
 		@media (max-width: 549px) {
-			overflow-y: hidden;
+			overflow: hidden;
 		}
 	}
 }
